@@ -684,6 +684,7 @@ performance on systems without hardware floating point support).
 @item DVB          @tab X @tab X @tab X @tab X
 @item DVD          @tab X @tab X @tab X @tab X
 @item PGS          @tab   @tab   @tab   @tab X
+@item SubRip (SRT) @tab X @tab X
 @item XSUB         @tab   @tab   @tab X @tab X
 @end multitable
 
